Updated README.MD and fixed compiler flags in CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.17)
 project(DoubleTapEvaluator C)
 
-set(CMAKE_C_FLAGS_RELEASE "-Ofast -march=native")
+set(CMAKE_C_FLAGS_RELEASE "-Ofast -mcpu=native")
 
 add_library(${PROJECT_NAME} STATIC src/doubletap_eval.c include/doubletap_eval tests/all_hands_test.c)
 
